--- a/package.json
+++ b/package.json
@@ -11,14 +11,44 @@
     "start": "npm run build && node dist/index.js",
     "migration:run": "db-migrate up",
     "format": "prettier --write src/**/*.ts",
-    "test": "export NODE_ENV=test && db-migrate up --env test && tsc && jasmine-ts && db-migrate down",
+    "test": "tsc && jasmine-ts ",
     "test:window": "set NODE_ENV=test && db-migrate up --env test && tsc && jasmine-ts && db-migrate down",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint --fix"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "@types/bcrypt": "^5.0.0",
+    "@types/jasmine": "^3.10.2",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
+    "@types/pg": "^8.6.3",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jasmine": "^3.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "supertest": "^6.2.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-rate-limit": "^6.0.1",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.2",
+    "uuid": "^8.3.2"
   }
 }
