--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "redis": "^4.1.0",
     "sequelize": "^6.19.2",
     "uuid": "^8.3.2"
   }
