--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/morgan": "^1.9.3",
     "@types/pg": "^8.6.3",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
@@ -49,6 +51,8 @@
     "mysql2": "^2.3.3",
     "redis": "^4.1.0",
     "sequelize": "^6.19.2",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2"
   }
 }
